[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Actors/Areas/DamageArea.gd" type="Script" id=1]

[node name="DamageArea" type="Area"]
script = ExtResource( 1 )

[node name="LifeTimeTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
[connection signal="body_entered" from="." to="." method="_on_DamageArea_body_entered"]
[connection signal="timeout" from="LifeTimeTimer" to="." method="_on_LifeTimeTimer_timeout"]
